# Palmetto

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOY_QUICKSTART.md  Dockerfile  LICENSE  README.md  RUNNING.md  STATUS.md  THIRD_PARTY_NOTICES.md  UNDERCUT_CAVITY_ENHANCEMENT.md  railway.json
backend/: .env.example  .env.railway  GNN_FINAL_REPORT.md  GNN_IMPLEMENTATION_REPORT.md  MFCAD_STATUS_REPORT.md  README.md  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/routes/: aag.py  analyze.py  dfm.py  export.py  graph.py  nl_interface.py  query.py  recognition.py  upload.py
backend/app/api/schemas/: export.py  recognition.py  upload.py
backend/app/core/: cad_loader.py  cpp_engine.py  occt_imports.py  occt_mock.py
backend/app/core/geometry/: convexity.py  dihedral.py  normals.py
backend/app/core/meshing/: gltf_exporter.py  tessellator.py
backend/app/core/topology/: attributes.py  builder.py  graph.py
backend/app/dfm/: __init__.py  manufacturing_rules.py
backend/app/ml/: __init__.py  gnn_model.py  graph_converter.py  mfcad_dataset.py
backend/app/nl_processing/: claude_client.py  intent_parser.py
backend/app/query/: __init__.py  query_engine.py  query_parser.py
backend/app/recognizers/: base.py  registry.py
backend/app/storage/: model_store.py
backend/app/testing/: __init__.py  metrics.py  mfcad_loader.py  models.py  taxonomy_mapper.py  validation.py
backend/docs/: analysis_situs_implementation.md  recognizers_implementation_summary.md
backend/models/: gnn_face_classifier.pt
backend/scripts/: analyze_dihedral_angles.py  analyze_face_geometry.py  analyze_mfcad_patterns.py  debug_aag_edges.py  debug_face_grouping.py  debug_gnn_predictions.py  learn_face_rules.py  quick_test_holes.py  run_mfcad_validation.py  sample_multiple_models.py  test_hole_recognizer_v2.py  train_gnn.py  validate_gnn_recognizer.py  verify_gt_components.py
backend/validation_results/: baseline_cavity.txt  face_classifier_v1.txt  planar_mfcad_v1.txt
core/: CMakeLists.txt
core/apps/palmetto_engine/: aag.cpp  aag.h  accessibility_analyzer.cpp  accessibility_analyzer.h  blend_recognizer.cpp  blend_recognizer.h  cavity_recognizer.cpp  cavity_recognizer.h  chamfer_recognizer.cpp  chamfer_recognizer.h  draft_angle_analyzer.cpp  draft_angle_analyzer.h  embree_ray_tracer.cpp  embree_ray_tracer.h  engine.cpp  engine.h  fillet_recognizer.cpp  fillet_recognizer.h  hole_recognizer.cpp  hole_recognizer.h  json_exporter.cpp  json_exporter.h  main.cpp  pocket_depth_analyzer.cpp  pocket_depth_analyzer.h  sdf_generator.cpp  sdf_generator.h  sdf_gradient_analyzer.cpp  sdf_gradient_analyzer.h  tetrahedral_mesher.cpp  tetrahedral_mesher.h  thickness_analyzer.cpp  thickness_analyzer.h  thickness_variance_analyzer.cpp  thickness_variance_analyzer.h  thin_wall_recognizer.cpp  thin_wall_recognizer.h  thin_wall_recognizer_v2.cpp  thin_wall_recognizer_v2.h  version.h
core/cmake/: FindOpenCASCADE.cmake
core/docs/: build-macos.md
core/scripts/: build_analysis_situs_macos.sh  build_occt_macos.sh
docs/: aag-specification.md  api-reference.md  architecture.md  module-inventory.md  recognizers.md
examples/test-models/: README.md
frontend/: .env.production.example  index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.css  App.tsx  main.tsx
frontend/src/api/: client.ts  dfm.ts
frontend/src/components/: AAGGraphViewer.css  AAGGraphViewer.tsx  DFMPanel.css  DFMPanel.tsx  FileUpload.css  FileUpload.tsx  NLInterface.css  NLInterface.tsx  ResultsPanel.css  ResultsPanel.tsx  ScriptingPanel.css  ScriptingPanel.tsx  Viewer3D.css  Viewer3D.tsx  ViolationGroup.tsx  WelcomeModal.css  WelcomeModal.tsx
frontend/src/types/: features.ts
frontend/src/utils/: sdfSlicer.ts  tetMeshSlicer.ts
